Fix scroll jumping by changing connected node list to an iframe

--- a/static-data/www/private/main.css
+++ b/static-data/www/private/main.css
@@ -14,11 +14,6 @@
     margin-top: 1em;
 }
 
-#connectedNodes{
-    overflow-y: hidden;
-    max-height: 300px;
-    max-width: 300px;
-}
 
 #configToggle, #configContent{
     margin-left: 1em;
@@ -61,3 +56,7 @@
   .torTransportField {
       margin-top: 2em;
   }
+
+  #connectedNodesIframe{
+    overflow: hidden;
+}
